--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web app to help keep track of the location of land owner's corners" />
+    <meta name="title" property="og:title" content="Pin Finder" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/joeypetrone/pin-finder/master/public/images/single-property-view.png" />
+    <meta name="description" property="og:description" content="Web app to help keep track of the location of land owner's corners" />
+    <meta name="author" content="Joey Petrone" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
